passo avanti nella cli implementato sceneswitcher cli version e tolto tipo 10 code smell si non mi andava di fare di piu